# QnnDemo

./: .gitignore  DLC转换指南.md  README.md  _commit_msg.txt  convert_model.ps1  get_logcat.bat  gradle.properties  settings.gradle.kts  setup_demo.ps1
app/src/main/cpp/: CMakeLists.txt  base_inference_runtime.h  llm_jni.cpp  llm_runtime.cpp  llm_runtime.h  qairt_runtime.cpp  qairt_runtime.h  qnn_jni.cpp
app/src/main/cpp/qairt_include/CPU/: QairtCpuContext.h  QairtCpuGraph.h
app/src/main/cpp/qairt_include/DSP/: QairtDspBackend.h  QairtDspContext.h  QairtDspGraph.h
app/src/main/cpp/qairt_include/GPU/: QairtGpuBackend.h  QairtGpuContext.h  QairtGpuGraph.h
app/src/main/cpp/qairt_include/Genie/: GenieAccuracy.h  GenieCommon.h  GenieDialog.h  GenieDlc.h  GenieEmbedding.h  GenieNode.h  GenieProfile.h  GenieSampler.h
app/src/main/cpp/qairt_include/HTP/: QairtHtpContext.h  QairtHtpDevice.h  QairtHtpGraph.h
app/src/main/cpp/qairt_include/LPAI/: QairtLpaiBackend.h  QairtLpaiCommon.h  QairtLpaiContext.h  QairtLpaiGraph.h
app/src/main/cpp/qairt_include/QNN/: QnnCommon.h  QnnContext.h  QnnDevice.h  QnnInterface.h  QnnMem.h  QnnOpDef.h  QnnProperty.h  QnnSdkBuildId.h  QnnTypes.h
app/src/main/cpp/qairt_include/QairtBackend/: QairtBackend.h  QairtBackendConfig.h  QairtBackendOperationName.h
app/src/main/cpp/qairt_include/QairtCommon/: QairtBackendCapabilityKeys.h  QairtCommon.h  QairtErrorReportingConfig.h  QairtInfo.h  QairtScalar.h
app/src/main/cpp/qairt_include/QairtContext/: QairtContext.h  QairtContextBinary.h  QairtContextCommon.h  QairtContextConfig.h
(+236 files in other folders)
